# ad_hoc_slcsp

./: .gitignore  COMMENTS  README.md  pyproject.toml
src/data_files/: plans_ks_6.csv
src/slcsp/: slcsp.py  slcsp_with_pandas.py
tests/slcsp/: plans_test.py
